hphp/test/zend/bad/ext-standard-streams/stream_get_meta_data_file_basic.php
<?php

$fp = fopen(__FILE__, "r");

var_dump(stream_get_meta_data($fp));

fclose($fp);

?>